# ros2_sandbox

./: .gitignore  README.md
bt_beer_me/: CMakeLists.txt  package.xml
bt_beer_me/behavior_trees/: beer_me.xml
bt_beer_me/include/bt_beer_me/: action_client.hpp  nav2_action.hpp  open_fridge_door_action.hpp  ros2_singletons.hpp
bt_beer_me/src/: bt_beer_me.cpp  nav2_action.hpp  open_fridge_door_action.hpp  ros2_singletons.hpp
interactive_camera_pose/: CMakeLists.txt  package.xml
interactive_camera_pose/src/: interactive_camera_pose.cpp
map_demos/: CMakeLists.txt  package.xml
map_demos/config/: ndt_large_scale.yaml  ndt_small_scale.yaml  slam_toolbox_online_sync.yaml
map_demos/launch/: build_ff_ndt.launch.py  build_ubr1_ndt.launch.py  build_ubr1_slam_toolbox.launch.py
map_demos/nodes/: clf_converter.py
pick_and_place/: CMakeLists.txt  package.xml
pick_and_place/launch/: pick_place_demo.launch.py
pick_and_place/src/: pick_and_place.cpp
rclcpp_issues/: CMakeLists.txt  package.xml
rclcpp_issues/src/: count_subscriber_issue.cpp  spin_issue.cpp
