<?xml version="1.0"?>
<package format="3">
  <name>pick_and_place</name>
  <version>0.1.0</version>
  <description>
    Pick and place demo for the UBR-1.
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>grasping_msgs</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>simple_grasping</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
